plyr 1.1 (2010-XX-XX) ---------------------------------------------------

* *dply deals more gracefully with the case when all results are NULL (fixes #10)
* *aply correctly orders output regardless of dimension names (fixes #11)

plyr 1.0 (2010-07-02) ---------------------------------------------------

New functions:

* arrange, a new helper method for reordering a data frame.
* count, a version of table that returns data frames immediately and that is
  much much faster for high-dimensional data.
* desc makes it easy to sort any vector in descending order
* join, works like merge but can be much faster and has a somewhat simpler
  syntax drawing from SQL terminology
* rbind.fill.matrix is like rbind.fill but works for matrices, code 
  contributed by C. Beleites

Speed improvements

* experimental immutable data frame (idata.frame) that vastly speeds up
  subsetting - for large datasets with large numbers of groups, this can yield
  10-fold speed ups. See examples in ?idata.frame to see how to use it.
* rbind.fill rewritten again to increase speed and work with more data types
* d*ply now much faster with nested groups

New features:

* d*ply now accepts NULL for splitting variables, indicating that the data
  should not be split
* plyr no longer exports internal functions, many of which were causing
  clashes with other packages
* rbind.fill now works with data frame columns that are lists or matrices
* test suite ensures that plyr behaviour is correct and will remain correct
  as I make future improvements.

Bug fixes:

* **ply: if zero splits, empty list(), data.frame() or logical() returned, 
  as appropriate for the output type
* **ply: leaving .fun as NULL now always returns list 
  (thanks to Stavros Macrakis for the bug report)
* a*ply: labels now respect options(stringAsFactors)
* each: scoping bug fixed, thanks to Yasuhisa Yoshida for the bug report
* list_to_dataframe is more consistent when processing a single data frame